// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CaseStudyCard renders CaseStudyCard and take a snapshop 1`] = `
<DocumentFragment>
  .c0 {
  padding-left: 2rem;
  padding-right: 2rem;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.c0 h1 {
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  text-align: center;
  margin: 0;
  color: #9E9E9E;
}

.c1 {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  justify-content: center;
}

.c1 .single-item-wrapper {
  height: 10rem;
  width: 14rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c1 .single-item-wrapper img {
  margin-top: 1.5rem;
  margin-right: 1rem;
}

@media (max-width:768px) {
  .c1 .single-item-wrapper {
    width: auto;
    height: auto;
    padding-top: 1.5rem;
  }

  .c1 .single-item-wrapper img {
    margin-top: 0;
  }
}

<div
    class="c0"
  >
    <h1>
      Acknowledgement 
    </h1>
    <div
      class="c1"
    >
      <div
        class="single-item-wrapper"
      >
        <img
          src="https://saunigigaweb.blob.core.windows.net/giga-maps-backend-dev/images/bad96889-546d-4613-831d-d323b9ba2ff5.png"
        />
      </div>
      <div
        class="single-item-wrapper"
      >
        <img
          src="https://saunigigaweb.blob.core.windows.net/giga-maps-backend-dev/images/d4bd40ee-d939-4324-a801-3dcf27f9fd1e.png"
        />
      </div>
      <div
        class="single-item-wrapper"
      >
        <img
          src="https://saunigigaweb.blob.core.windows.net/giga-maps-backend-dev/images/8ab691a4-e80a-4122-aacc-f3cddb14cf58.png"
        />
      </div>
      <div
        class="single-item-wrapper"
      >
        <img
          src="https://saunigigaweb.blob.core.windows.net/giga-maps-backend-dev/images/84df5526-ebec-4e80-b843-6d7eb734b848.png"
        />
      </div>
      <div
        class="single-item-wrapper"
      >
        <img
          src="https://saunigigaweb.blob.core.windows.net/giga-maps-backend-dev/images/4e57124c-5c86-4a5d-b8cf-5d425f0fba04.png"
        />
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CaseStudyCard renders FooterLinks and take a snapshop 1`] = `
<DocumentFragment>
  .c2 {
  display: flex;
  align-items: center;
  block-size: 2.5rem;
}

.c2 img,
.c2 svg {
  block-size: 2.5rem;
  object-fit: contain;
}

.c0 {
  padding-left: 7rem;
  padding-right: 7rem;
  margin-top: 5rem;
  padding-bottom: 5rem;
}

.c1 p {
  margin-top: 1rem;
  color: #C8C8C8;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  text-align: left;
}

.c3 {
  display: flex;
  flex-flow: wrap;
  gap: 10%;
}

.c3 h4 {
  color: #fff;
  font-size: 20px;
  font-weight: 500;
  line-height: 28px;
  text-align: left;
}

.c3 .footer-link-wrapper {
  display: flex;
  flex-direction: column;
  margin-top: 0.5rem;
}

.c3 .footer-link-wrapper a {
  margin-top: 0.5rem;
  color: #C8C8C8;
}

.c3 .link-list-item {
  min-width: 10rem;
  margin-top: 3rem;
}

.c4 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-top: 2rem;
  flex-flow: wrap;
}

.c4 .right-section {
  display: flex;
  align-items: center;
  flex-flow: wrap;
  margin-top: 1rem;
}

.c4 .right-section p {
  color: #fff;
  font-size: 14px;
  font-weight: 400;
  line-height: 1.25rem;
  text-align: left;
  margin-right: 0.4rem;
}

.c4 .right-section a {
  color: #fff;
}

.c4 .right-section svg {
  fill: #fff;
  margin-left: 0.5rem;
  margin-top: 0.5rem;
}

.c4 .left-section {
  display: flex;
  align-items: center;
  flex-flow: wrap;
}

.c4 .left-section svg {
  fill: #fff;
  margin-right: 0.5rem;
}

@media (max-width:768px) {
  .c2 img {
    display: none;
  }
}

@media (max-width:996px) {
  .c0 {
    padding-left: 2rem;
    padding-right: 2rem;
  }
}

@media (max-width:768px) {
  .c0 {
    padding-left: 1rem;
    padding-right: 1rem;
  }
}

@media (max-width:768px) {
  .c1 p {
    margin-top: 0;
    font-size: 1rem;
    line-height: 1.5rem;
  }
}

@media (max-width:768px) {
  .c3 .footer-link-wrapper {
    margin-top: 0;
  }

  .c3 .footer-link-wrapper a {
    margin-top: 0;
  }
}

@media (max-width:768px) {
  .c3 .link-list-item {
    margin-top: 2rem;
  }
}

@media (max-width:768px) {
  .c3 h4 {
    font-size: .875rem;
    line-height: 1.25rem;
    margin-bottom: .5rem;
  }

  .c3 a {
    font-size: .875rem;
    line-height: 1.25rem;
    margin-bottom: .25rem;
  }
}

@media (max-width:768px) {
  .c4 {
    margin-top: 1rem;
  }

  .c4 .left-section {
    margin-top: 1rem;
  }
}

<div
    class="c0"
  >
    <div
      class="c1"
    >
      <div
        class="c2"
      >
        <svg
          data-name="Layer 1"
          id="Layer_1"
          version="1.1"
          viewBox="0 0 1000 210"
          xmlns="http://www.w3.org/2000/svg"
        >
          
  
          <defs>
            
    
            <style>
              
      .cls-1 {
        fill: #fff;
        stroke-width: 0px;
      }
    
            </style>
            
  
          </defs>
          
  
          <path
            class="cls-1"
            d="M69.3,79.4h57.2v70.8c-15,6.4-31.9,9.6-50.6,9.6s-43.2-6.9-56.3-20.7C6.5,125.1,0,105.5,0,80.2s3.2-29.8,9.7-42c6.5-12.2,15.7-21.6,27.8-28.3C49.6,3.3,63.4,0,79.1,0s32.1,3.1,45.5,9.3l-4.3,9.8c-13.4-6.2-27.4-9.3-41.8-9.3-20.4,0-36.7,6.3-48.7,18.9-12,12.6-18,29.7-18,51.1s5.7,40.9,17.1,52.7,28.1,17.7,50.2,17.7,26.4-2,36.4-6v-54.5h-46.2v-10.2Z"
          />
          
  
          <path
            class="cls-1"
            d="M158.4,10.2c0-6.8,2.2-10.2,6.7-10.2s3.9.9,5.1,2.7c1.2,1.8,1.9,4.3,1.9,7.5s-.6,5.7-1.9,7.5-3,2.8-5.1,2.8c-4.5,0-6.7-3.4-6.7-10.3ZM170.3,157.6h-10.5V42.2h10.5v115.3Z"
          />
          
  
          <path
            class="cls-1"
            d="M295.1,42.2v7.3l-23.9,1.5c6.4,7.9,9.6,16.6,9.6,26.1s-3.7,20.1-11.1,27c-7.4,6.9-17.3,10.3-29.8,10.3s-8.9-.2-11-.6c-4.2,2.2-7.4,4.8-9.6,7.7s-3.3,6.1-3.3,9.4,1.4,6.4,4.2,8.1c2.8,1.7,7.5,2.5,14.1,2.5h20.2c12.5,0,22.1,2.5,28.8,7.6,6.6,5.1,10,12.5,10,22.4s-4.9,21.6-14.8,28.2c-9.9,6.6-23.9,9.9-42.2,9.9s-25.7-2.8-33.7-8.4c-8-5.6-11.9-13.4-11.9-23.3s2.5-14.5,7.4-19.7c4.9-5.2,11.6-8.8,20-10.7-3.5-1.5-6.2-3.6-8.3-6.3-2.1-2.7-3.1-5.9-3.1-9.4,0-7.7,4.9-14.5,14.7-20.4-6.7-2.8-12-7.1-15.7-13-3.7-5.9-5.6-12.7-5.6-20.3,0-11.5,3.7-20.8,11-27.7,7.3-7,17.2-10.4,29.7-10.4s13.4.7,17.6,2.2h36.9ZM201.7,177.1c0,15.8,11.8,23.8,35.3,23.8s45.4-9.7,45.4-29-2.4-12-7.1-15.1c-4.7-3.1-12.4-4.7-23-4.7h-18.9c-21.2,0-31.7,8.3-31.7,24.9ZM210.5,78.2c0,8.9,2.7,15.8,8.1,20.7,5.4,4.9,12.6,7.4,21.7,7.4s17-2.4,22.1-7.3,7.7-12,7.7-21.2-2.6-17.2-7.9-22.1c-5.3-4.9-12.6-7.4-22.1-7.4s-16.4,2.6-21.7,7.9c-5.3,5.3-7.9,12.6-7.9,22Z"
          />
          
  
          <path
            class="cls-1"
            d="M386,157.6l-2.7-18.3h-.8c-5.8,7.4-11.8,12.7-17.9,15.8-6.1,3.1-13.4,4.6-21.7,4.6s-20.1-2.9-26.4-8.7c-6.3-5.8-9.4-13.8-9.4-24.1s4.7-20,14.1-26.2c9.4-6.2,22.9-9.5,40.7-9.9l22-.6v-7.6c0-11-2.2-19.2-6.7-24.8-4.5-5.6-11.6-8.4-21.5-8.4s-21.7,3-33.2,8.9l-3.9-9.1c12.7-5.9,25.2-8.9,37.6-8.9s22.1,3.3,28.4,9.9c6.3,6.6,9.4,16.8,9.4,30.8v76.7h-7.7ZM343.6,150.1c12.3,0,22-3.5,29.1-10.6,7.1-7,10.7-16.8,10.7-29.3v-11.4l-20.2.8c-16.2.8-27.7,3.3-34.6,7.6-6.9,4.3-10.3,11-10.3,20s2.2,12.8,6.6,16.8c4.4,4,10.7,6,18.7,6Z"
          />
          
  
          <path
            class="cls-1"
            d="M516.5,157.6l-37.4-121.7h-1c1.3,24.8,2,41.3,2,49.6v72.2h-29.4V2.4h44.8l36.7,118.6h.6L571.9,2.4h44.8v155.1h-30.7v-73.4c0-3.5,0-7.5.2-12,.1-4.5.6-16.6,1.4-36.1h-1l-40,121.5h-30.1Z"
          />
          
  
          <path
            class="cls-1"
            d="M724.6,157.6l-6.3-16.1h-.8c-5.5,6.9-11.1,11.6-16.8,14.3-5.8,2.7-13.3,4-22.5,4s-20.4-3.3-26.9-9.8c-6.5-6.5-9.8-15.8-9.8-27.8s4.4-21.9,13.2-27.9c8.8-6,22.1-9.3,39.8-9.9l20.6-.6v-5.2c0-12-6.2-18-18.5-18s-20.6,2.9-33.4,8.6l-10.7-21.9c13.7-7.1,28.8-10.7,45.4-10.7s28.1,3.5,36.6,10.4c8.5,6.9,12.7,17.5,12.7,31.6v79.1h-22.6ZM715.1,102.6l-12.5.4c-9.4.3-16.4,2-21,5.1-4.6,3.1-6.9,7.8-6.9,14.2,0,9.1,5.2,13.7,15.7,13.7s13.5-2.2,18-6.5c4.5-4.3,6.7-10,6.7-17.2v-9.8Z"
          />
          
  
          <path
            class="cls-1"
            d="M842.2,159.7c-13.9,0-24.9-5.1-32.8-15.2h-1.7c1.1,9.9,1.7,15.6,1.7,17.2v48.1h-32.4V38.9h26.3l4.6,15.4h1.5c7.6-11.7,18.8-17.6,33.6-17.6s25,5.4,32.9,16.2c7.9,10.8,11.9,25.9,11.9,45.1s-1.9,23.7-5.6,33-9,16.4-15.9,21.3-14.9,7.3-24.2,7.3ZM832.7,62.6c-8,0-13.8,2.5-17.5,7.4-3.7,4.9-5.6,13-5.7,24.4v3.5c0,12.7,1.9,21.9,5.7,27.4,3.8,5.5,9.8,8.3,18,8.3,14.5,0,21.8-12,21.8-35.9s-1.8-20.4-5.4-26.3c-3.6-5.8-9.2-8.8-16.8-8.8Z"
          />
          
  
          <path
            class="cls-1"
            d="M996.3,122.3c0,12.2-4.2,21.4-12.7,27.8-8.5,6.4-21.1,9.6-37.9,9.6s-16-.6-22.1-1.7c-6.1-1.2-11.8-2.9-17.1-5.1v-26.7c6,2.8,12.8,5.2,20.3,7.1,7.5,1.9,14.2,2.9,19.9,2.9,11.7,0,17.6-3.4,17.6-10.2s-.8-4.6-2.3-6.2-4.2-3.4-8.1-5.4c-3.8-2-8.9-4.4-15.3-7.1-9.1-3.8-15.8-7.4-20.1-10.6s-7.4-7-9.3-11.2c-1.9-4.2-2.9-9.4-2.9-15.5,0-10.5,4.1-18.7,12.3-24.5,8.2-5.8,19.8-8.6,34.8-8.6s28.2,3.1,41.7,9.3l-9.8,23.3c-5.9-2.5-11.5-4.6-16.7-6.3s-10.4-2.4-15.8-2.4c-9.5,0-14.3,2.6-14.3,7.7s1.5,5.4,4.6,7.5c3.1,2.1,9.8,5.3,20.2,9.4,9.3,3.7,16.1,7.3,20.4,10.5,4.3,3.3,7.5,7,9.6,11.2,2.1,4.2,3.1,9.3,3.1,15.2Z"
          />
          

        </svg>
      </div>
      <p>
        Connecting every young person to information, opportunity and choice.
      </p>
    </div>
    <div
      class="c3"
    >
      <div
        class="link-list-item"
      >
        <h4>
          Giga products
        </h4>
        

        <div
          class="footer-link-wrapper"
        >
          
  
          <a
            _blank""=""
            href="/maps target="
          >
            Giga Maps
          </a>
          
  
          <a
            href="https://projectconnect.unicef.org/daily-check-app"
            target="_blank"
          >
            Daily check app
          </a>
          
  
          <a
            href="https://giga.global/isps/"
            target="_blank"
          >
            Giga ISP
          </a>
          

        </div>
      </div>
      <div
        class="link-list-item"
      >
        <h4>
          Organization
        </h4>
        

        <div
          class="footer-link-wrapper"
        >
          

          <a
            href="https://giga.global/"
            target="_blank"
          >
            Giga
          </a>
          

          <a
            href="https://www.unicef.org/"
            target="_blank"
          >
            Unicef
          </a>
          

          <a
            href="https://www.itu.int/en/Pages/default.aspx"
            target="_blank"
          >
            ITU
          </a>
          

        </div>
      </div>
      <div
        class="link-list-item"
      >
        <h4>
          Resources
        </h4>
        

        <div
          class="footer-link-wrapper"
        >
          
  
          <a
            href="/docs/explore-api"
            target="_blank"
          >
            Data downloads & API
          </a>
          
  
          <a
            href="https://giga.global/stories/"
            target="_blank"
          >
            Gigablog
          </a>
          

        </div>
      </div>
    </div>
    <div
      class="c4"
    >
      <div
        class="right-section"
      >
        <p>
          A United Nation's initiative
        </p>
        <p>
          © 2024
        </p>
        <p>
          <a
            class="giga-logo"
            href="https://giga.global/"
            rel="noreferrer"
            target="_blank"
          >
            giga
          </a>
        </p>
        <p>
          <a
            href="https://www.unicef.org/"
            rel="noreferrer"
            target="_blank"
          >
            <svg
              height="20"
              viewBox="0 0 68 17"
              width="48"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="currentColor;"
                fill-rule="evenodd"
              >
                <path
                  d="M58.637.456c-3.502 0-6.351 2.849-6.351 6.351s2.849 6.35 6.35 6.35c3.502 0 6.351-2.848 6.351-6.35S62.137.456 58.637.456m4.953 2.806c-.324.22-.667.419-1.022.593a6.62 6.62 0 0 0-.758-1.187c.26-.16.51-.336.74-.53.393.33.742.708 1.04 1.124m-2.672-2.106a6.1 6.1 0 0 1 1.424.816 5.729 5.729 0 0 1-.7.494 6.705 6.705 0 0 0-1.046-.966c.116-.107.225-.22.322-.344m.493 1.442a5.96 5.96 0 0 1-1.07.447 9.359 9.359 0 0 0-.53-1.036c.205-.09.399-.202.58-.34.372.272.714.584 1.02.929m-.751-1.539c-.087.103-.18.199-.282.287a6.378 6.378 0 0 0-1.064-.588c.462.05.914.149 1.346.301m-.497.455a2.677 2.677 0 0 1-.487.272 10.058 10.058 0 0 0-.613-.853 6.38 6.38 0 0 1 1.1.58zM58.767.977c.234.282.454.583.655.898a2.602 2.602 0 0 1-.655.115zm0 1.276c.273-.013.54-.061.799-.148.194.323.368.662.52 1.01a5.825 5.825 0 0 1-1.32.183zM58.502.989V1.99a2.602 2.602 0 0 1-.646-.115c.195-.304.413-.601.646-.886m-.896.797a2.552 2.552 0 0 1-.488-.272 6.4 6.4 0 0 1 1.096-.579c-.217.27-.423.556-.608.851m.366-1.032a6.54 6.54 0 0 0-1.072.591 2.933 2.933 0 0 1-.282-.287c.437-.154.89-.254 1.354-.304m4.351 10.9c-.845-.463-.861-1.106-.816-1.342.044-.24.21-.135.315-.135.555 0 1.139-.165 1.859-.9.811-.828 1.066-2.668-.181-3.868-1.344-1.293-2.773-1.067-3.695.096-.189.238-.65.412-1.05.399-.59-.023-.217.443-.217.54 0 .097-.09.165-.143.15-.2-.057-.12.24-.12.33 0 .09-.082.135-.126.135-.249 0-.18.223-.173.285.007.06-.015.163-.098.209-.079.045-.172.24-.172.39 0 .27.247.457.66.765.412.308.464.6.472.81.008.209.027.548.12.772.112.27.097.765-.472.787-.697.028-1.934.584-2.039.622-.393.14-.913.19-1.318.088a6.136 6.136 0 0 1-.623-.505c-.081-.28.06-.58.202-.783.232.232.578.217.771.224.195.008 1.147-.14 1.282-.186.136-.045.195-.03.278 0 .363.132.861.171 1.064-.525.203-.697-.277-.502-.337-.472-.06.03-.143.022-.113-.037.09-.178-.044-.16-.12-.166-.194-.02-.449.188-.531.262-.083.076-.165.068-.196.053-.258-.129-1.028.057-1.267-.36.023-.112-.195-1.806-.306-2.099a.286.286 0 0 1 .029-.276c.195-.294.735.021 1.027.014.35-.01.406-.155.503-.273.091-.115.16-.05.21-.083.063-.041.003-.124.025-.169.024-.044.05-.022.109-.074.06-.054-.009-.165.022-.21.087-.13.322-.026.181-.367-.077-.187.03-.39.135-.525.17-.219.825-1.141-.33-2.1-1.102-.913-2.22-.84-2.94-.06-.718.78-.359 1.92-.284 2.22.075.3-.141.571-.39.69-.197.092-.646.392-.985.687a6.06 6.06 0 0 1 3.816-5.513c.096.121.205.236.322.344-.255.185-.808.68-.808.68s.076.011.146.028c.049.012.152.043.152.043s.488-.414.716-.58c.178.136.373.249.579.34-.11.187-.388.71-.388.71s.064.037.121.075c.058.04.095.073.095.073s.303-.57.417-.762c.255.085.52.134.79.146v1.046c-.15-.004-.533-.02-.689-.035l-.097-.01.054.081c.042.06.074.12.102.175l.01.022.026.003c.113.009.463.021.593.024v1.904h.265v-.435c.387-.019.709-.046 1.099-.08l.016-.002.342-.302-.186.016a14.27 14.27 0 0 1-1.1.097l-.171.01V3.558a6.12 6.12 0 0 0 1.425-.2c.127.315.369 1.077.369 1.077l.248-.078s-.241-.756-.367-1.07a6.136 6.136 0 0 0 1.14-.486c.292.36.544.75.752 1.167-.187.087-.529.208-.528.208.273.03.481.095.481.095s.097-.041.158-.069l.072.165.342.152-.04-.095-.14-.333c.362-.18.719-.384 1.059-.612a6.087 6.087 0 0 1-1.415 8.177zM51.71 2.144l-.098.088c-.373.33-1.224 1.2-1.093 2.155l.013.067.043.19.118-.11c.521-.476.912-1.284 1.072-2.217l.045-.262-.1.09m-1.728 1.649-.043.115c-.059.16-.166.495-.224.94-.08.63-.062 1.522.486 2.188l.06.079.064.08.081-.404c.09-.716-.029-2.215-.291-2.885l-.09-.227zm-.631 2.58-.008.117c-.045.642-.012 2.226 1.27 3.066l.152.098-.007-.18c-.022-.6-.723-2.395-1.25-3.038l-.149-.182zm.221 2.833.022.109c.187.91 1.05 2.384 2.383 2.811l.183.06-.066-.18c-.249-.68-1.533-2.267-2.359-2.79L49.55 9.1zm2.677-5.693-.106.064c-.992.606-1.456 1.34-1.421 2.245l.009.207.144-.12c.537-.445 1.208-1.58 1.406-2.225l.072-.235zm-.584 1.983-.075.07c-.255.243-1.077 1.117-1.005 2.199.01.167.049.345.112.531l.059.173.106-.149c.393-.553.914-2.012.885-2.69l-.008-.205zm.043 1.878-.057.083c-.414.615-.625 1.247-.613 1.83.012.43.15.842.41 1.225l.086.13.073-.138c.18-.336.321-1.428.3-2.292a3.02 3.02 0 0 0-.09-.73l-.054-.19zm.481 2.007-.027.088c-.124.399-.183.79-.173 1.161.025.84.395 1.496 1.106 1.951l.12.076.026-.162.01-.129c-.019-.682-.527-2.4-.926-2.926l-.11-.144zm-1.4 2.664.052.086c.535.895 1.441 2.051 3.137 1.754l.142-.024-.08-.119c-.317-.471-2.376-1.632-3.103-1.751l-.2-.033zm2.51 2.274-.267.072.256.105c1.078.441 2.43.572 3.214.308.294-.1.473-.262.692-.475 1.38.143 2.671 1.29 3.425 2.227l.04.046.059-.018a.874.874 0 0 0 .27-.189l.053-.057-.048-.063c-.786-1.027-2.016-1.665-2.07-1.69-1.107-.54-3.062-.961-5.625-.266"
                />
                <path
                  d="m53.357 11.452.015.09c.161 1.017.574 2.35 2.29 2.202l.11-.009-.028-.107c-.116-.462-1.688-1.804-2.237-2.181l-.165-.085zm12.13-9.397.045.262c.16.933.552 1.74 1.073 2.218l.119.108.041-.19.014-.066c.13-.955-.72-1.826-1.093-2.155l-.099-.088zm1.787 1.625-.09.227c-.264.67-.384 2.17-.293 2.885l.081.405.064-.081.061-.079c.547-.666.566-1.558.485-2.188a4.458 4.458 0 0 0-.223-.94l-.043-.115zm.665 2.575-.15.182c-.526.643-1.228 2.437-1.249 3.039l-.007.18.15-.099c1.284-.84 1.316-2.424 1.272-3.066l-.01-.117zm-.19 2.845-.187.118c-.825.522-2.11 2.108-2.358 2.789l-.067.18.183-.06c1.333-.427 2.196-1.901 2.383-2.811l.024-.109.022-.108M64.994 3.42l.068.237c.184.648.833 1.796 1.361 2.251l.144.123.011-.207c.054-.904-.397-1.647-1.377-2.272l-.104-.066zm.563 2.007-.008.205c-.027.678.492 2.137.886 2.69l.106.149.059-.173a2.05 2.05 0 0 0 .111-.531c.072-1.082-.75-1.956-1.004-2.199l-.074-.07zm-.022 1.866-.056.19a2.97 2.97 0 0 0-.09.73c-.02.864.122 1.956.3 2.292l.074.137.088-.13a2.25 2.25 0 0 0 .406-1.224c.014-.583-.197-1.215-.612-1.83l-.055-.083zm-.455 2.004-.11.144c-.397.525-.906 2.244-.925 2.926l.01.129.027.162.12-.076c.71-.455 1.082-1.112 1.106-1.95a3.548 3.548 0 0 0-.174-1.162l-.028-.088-.027-.085m1.48 2.662-.199.033c-.727.119-2.786 1.28-3.103 1.751l-.08.119.142.024c1.697.297 2.602-.859 3.137-1.754l.051-.086zm-8.185 2.627c-.054.025-1.285.663-2.07 1.69l-.048.063.054.057c.055.06.184.16.27.19l.057.017.04-.046c.753-.937 2.045-2.084 3.425-2.227.219.213.398.375.694.475.783.264 2.134.133 3.214-.308l.255-.105L64 14.32c-2.564-.695-4.518-.274-5.625.266m5.581-3.224-.165.085c-.55.377-2.121 1.72-2.237 2.181l-.027.107.108.01c1.717.147 2.13-1.186 2.292-2.202l.015-.09zm-43.894-8.48h2.169V.904h-2.169zm.172 11.88h1.824V5.129h-1.824v9.635zM6.469 5.136h1.823v9.636H6.507V13.35H6.47c-.73 1.21-1.958 1.708-3.302 1.708C1.152 15.059 0 13.524 0 11.585V5.136h1.824v5.7c0 1.671.384 2.899 2.13 2.899.75 0 1.766-.384 2.15-1.381.344-.903.365-2.035.365-2.265zm5.464 1.42h.039c.613-1.209 1.957-1.708 2.917-1.708.671 0 3.646.173 3.646 3.263v6.66h-1.822V8.708c0-1.594-.672-2.457-2.208-2.457 0 0-.999-.058-1.766.71-.268.268-.767.69-.767 2.572v5.24h-1.824V5.136h1.785zm17.76 1.671c-.096-1.202-.667-2.04-1.964-2.04-1.734 0-2.402 1.504-2.402 3.756 0 2.25.668 3.758 2.402 3.758 1.2 0 1.944-.78 2.039-2.156h1.813c-.154 2.156-1.755 3.47-3.872 3.47-3.07 0-4.29-2.172-4.29-4.996 0-2.807 1.41-5.15 4.445-5.15 2.021 0 3.546 1.28 3.638 3.358zm4.611 2.058c-.133 1.679.553 3.416 2.402 3.416 1.411 0 2.116-.552 2.325-1.948h1.91c-.288 2.177-1.967 3.262-4.253 3.262-3.071 0-4.293-2.172-4.293-4.996 0-2.807 1.414-5.15 4.445-5.15 2.86.06 4.212 1.87 4.212 4.523v.893zm4.843-1.256c.039-1.602-.687-2.842-2.441-2.842-1.509 0-2.402 1.274-2.402 2.842zm3.958 5.701V6.415h-1.647v-1.26h1.647V3.096C43.165 1 44.745.447 46.1.447c.438 0 .86.113 1.3.188v1.506c-.309-.016-.613-.058-.92-.058-1.026 0-1.618.27-1.562 1.317v1.754h2.212v1.261h-2.212v8.315h-1.812"
                />
              </g>
            </svg>
          </a>
        </p>
        <p>
          <a
            href="https://www.itu.int/en/Pages/default.aspx"
            rel="noreferrer"
            target="_blank"
          >
            <svg
              height="20"
              viewBox="0 0 37 40"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                fill="currentColor;"
                fill-rule="evenodd"
              >
                <path
                  d="M17.886 18.362v.457c.385.229.77.457 1.156.61a20.653 20.653 0 0 0 4.085 1.6v-.381c-1.31-.381-2.62-.915-3.931-1.524a11.574 11.574 0 0 1-1.31-.762"
                />
                <path
                  d="M36.075 14.78c-1.079-3.2-2.929-5.942-5.395-8.075h-.077a18.04 18.04 0 0 0-3.777-2.514 18.6 18.6 0 0 0-13.488-1.296c-2.08.61-4.007 1.524-5.703 2.82C6.325 3.884 5.09 1.98 3.78 0c.386.914 1.619 3.429 3.16 6.248-2.004 1.6-3.7 3.58-4.933 6.019-1.156 2.21-1.85 4.647-2.003 7.01v.837C-.15 26.895 3.627 33.524 10.178 36.8c4.393 2.21 9.403 2.514 14.105.99a18.466 18.466 0 0 0 2.852-1.142c3.082 1.295 6.242 2.361 9.248 3.352-2.466-1.219-5.318-2.59-7.861-4.19.54-.381 1.156-.762 1.695-1.22l.078-.076a18.483 18.483 0 0 0 4.701-5.866c.77-1.372 1.233-2.896 1.619-4.343v-.229c.077-.228.077-.38.154-.61v-.152c.462-2.819.231-5.714-.694-8.533zm-9.48-10.285c1.233.61 2.312 1.296 3.314 2.134-.462 0-1.002 0-1.541.076-.617-.61-1.31-1.143-2.158-1.524a9.764 9.764 0 0 0-2.235-.762c-.309-.457-.617-.914-.926-1.219 1.234.305 2.39.762 3.546 1.295M10.487 5.867c.154-.153.23-.381.308-.534 2.697-.61 5.78-.61 8.863.077-.077.076-.154.228-.23.304-.31.61-.31 1.296-.078 2.057.154.305.308.686.54.99a26.952 26.952 0 0 0-6.552 4.039 56.546 56.546 0 0 1-3.314-3.81c-.154-1.142 0-2.209.463-3.123M9.639 8.38c-.54-.686-1.08-1.371-1.542-2.057.694-.305 1.388-.61 2.158-.838 0 .076-.077.152-.077.228-.462.762-.616 1.676-.54 2.667zm10.096-.762c-.23-.61-.23-1.219.078-1.676l.23-.457c1.62.38 3.238.99 4.78 1.752-1.62.305-3.16.838-4.548 1.372-.231-.305-.462-.61-.54-.99zm5.087-.838a25.47 25.47 0 0 0-4.393-1.6c.154-.152.462-.229.694-.305.77-.305 1.618-.305 2.62-.152.386.686.771 1.447 1.08 2.057zm-.54-1.905c.54.153 1.157.381 1.773.61.694.38 1.31.762 1.773 1.219-.925.076-1.85.305-2.39.38h-.076c-.309-.685-.694-1.523-1.08-2.209m.849 2.667a24.143 24.143 0 0 1 1.618 4.495c-1.079 0-2.312-.305-3.468-.914-1.156-.534-2.158-1.295-2.775-2.134 1.465-.609 3.006-1.142 4.625-1.447m.539.076c1.465.762 2.775 1.676 4.008 2.667 0 .152-.077.38-.154.533-.231.457-.694.838-1.387 1.067-.309.076-.617.152-1.002.152-.309-1.448-.848-2.971-1.465-4.419m.308-.229c.617-.152 1.465-.228 2.235-.304.925.838 1.465 1.828 1.542 2.743-1.156-.915-2.39-1.753-3.777-2.439M13.492 3.276c2.852-.762 5.935-.914 8.941-.228.308.304.694.762 1.002 1.219-.925-.076-1.696 0-2.466.228-.386.153-.771.305-1.002.61a20.266 20.266 0 0 0-8.787-.229c.54-.685 1.31-1.219 2.312-1.6m-1.927.686c-.385.305-.693.686-1.001 1.067-.925.228-1.85.533-2.698.99a17.562 17.562 0 0 1 3.7-2.057zm-1.233 32.457c-1.233-.61-2.466-1.371-3.468-2.286-.54-1.371-.693-2.59-.848-3.885a29.956 29.956 0 0 0 5.627 3.733c2.158.99 4.316 1.752 6.397 2.21-.925.609-2.235 1.295-3.777 1.676a16.414 16.414 0 0 1-3.93-1.448zm13.797 1.067c-2.93.914-6.09 1.142-9.018.533 1.387-.457 2.62-1.143 3.391-1.6.077-.076.077-.076.154-.076 2.852.533 5.55.533 7.862 0 .077 0 .077.076.154.076-.77.381-1.619.762-2.543 1.067m-5.01-1.448c.925-.61 1.772-1.371 2.543-2.133 1.387.838 2.852 1.524 4.24 2.133-2.005.457-4.317.457-6.783 0m15.569-7.543a17.38 17.38 0 0 1-4.702 5.79c-.616.458-1.31.915-2.08 1.22a38.566 38.566 0 0 1-3.7-2.743c2.004-.457 3.545-1.143 5.395-2.286-.386-.152-.771-.305-1.156-.533a10.444 10.444 0 0 0 2.852-.61c1.85-.61 3.314-1.6 4.238-2.895-.23.686-.539 1.372-.847 2.057m1.695-5.257c-.077.229-.077.534-.154.762v.152c-.154.381-.308.839-.54 1.296-.77 1.6-2.389 2.819-4.47 3.504-1.079.381-2.158.61-3.391.686-.693-.38-1.464-.838-2.158-1.219l.463-1.143c-.078-.076-.232-.076-.309-.152-.154.38-.308.762-.54 1.066-2.543-1.523-5.01-3.428-7.398-5.409v2.59c1.31 1.143 2.62 2.21 3.853 3.277-.154.076-.385.228-.616.304-1.465-.38-2.929-.838-4.394-1.447h-.924c1.541.685 3.16 1.295 4.701 1.676-1.387.61-3.468 1.22-3.93 1.295a46.938 46.938 0 0 0 4.7 3.276c-.77.762-1.772 1.524-2.774 2.21a27.237 27.237 0 0 1-6.705-2.362 26.286 26.286 0 0 1-5.78-3.886 10.458 10.458 0 0 1 0-2.21H5.63c-.077.61-.077 1.22-.077 1.83-.617-.61-1.156-1.22-1.696-1.83h-.54c.617.839 1.465 1.6 2.313 2.363v.152c.077.99.154 2.21.616 3.58A18.253 18.253 0 0 1 .543 22.933c.463 1.143 1.08 2.362 1.927 3.505v-.076h.462C1.392 24.229.467 22.095.39 20.038c.077-2.59.693-5.18 1.927-7.619.385-.686.77-1.371 1.156-1.98-.386 1.142-.386 2.437-.154 3.732h.385c-.308-1.6-.154-3.123.54-4.419.23-.457.693-1.066 1.001-1.447.617-.61 1.234-1.067 1.927-1.524 1.388 2.438 2.852 4.952 4.162 6.629-1.233.076-2.003.076-3.237-.077.154.305.308.61.463.838l.154.381c.385.686.77 1.296 1.156 1.905a23.915 23.915 0 0 0-2.158 3.505v.914c.617-1.448 1.464-2.819 2.39-4.038l.076.076v-2.666h4.702c-.463-.381-.848-.762-1.233-1.143 1.85-1.6 4.084-2.972 6.474-3.962.694.914 1.695 1.752 2.928 2.362 1.31.61 2.621.99 3.777.914.154.61.309 1.22.386 1.829h.385c-.077-.61-.154-1.22-.308-1.829.308 0 .693-.076 1.002-.152.693-.305 1.31-.686 1.618-1.296 0-.152.077-.228.154-.38a25.764 25.764 0 0 1 3.469 3.657h.462c-1.08-1.448-2.39-2.896-3.854-4.115 0-.99-.462-2.057-1.387-3.123.617 0 1.233 0 1.696.076 2.235 1.904 3.93 4.343 5.01 7.162.23.914.23 1.828.076 2.59-.23-.457-.539-.99-.847-1.524v.153h-.386c.463.685.771 1.295 1.08 1.98-.078.23-.155.458-.309.686-.308.61-.77 1.143-1.387 1.6v.534c.77-.534 1.387-1.22 1.773-1.981.076-.077.076-.229.154-.305.693 1.752.924 3.505.77 5.257m-.616-5.79c.154-.458.231-.915.231-1.372.385 1.295.54 2.59.617 3.886-.232-.838-.463-1.676-.848-2.514"
                />
                <path
                  d="M7.327 26.21V15.619c0-.457.539-.533 1.078-.533v-.534H2.78v.534c.54 0 1.002.076 1.002.533v10.59c0 .382-.385.458-.925.458v.457H8.33v-.457c-.617 0-1.002-.076-1.002-.457m13.178-7.848h.54v-3.733H10.564v3.733h.54c0-1.219.539-1.753 1.387-1.753h1.541v9.524c0 .229-.077.534-1.002.534v.457h5.55v-.457c-.925 0-1.08-.305-1.08-.534V16.61h1.619c.77 0 1.387.534 1.387 1.753m13.796-3.734h-4.007v.457c.539 0 1.078.076 1.078.61v7.77c0 1.144-1.31 1.753-2.312 1.753-1.079 0-2.312-.61-2.312-1.752v-7.772c0-.38.308-.61.77-.61v-.456h-4.855v.457c.463 0 .848.152.848.61v8.076c0 2.438 2.852 3.504 4.933 3.504 2.08 0 4.932-1.143 4.932-3.504v-8.077c0-.457.386-.61.925-.61z"
                />
                <path
                  d="M17.886 17.448c.308-.077.616-.077.925-.153-.155-.152-.309-.228-.463-.38h-.462zm-4.162 1.6-1.08-1.067h1.08v-1.067H12.49c-.848 0-1.002.838-1.002 1.448v.305a37.168 37.168 0 0 0 2.235 2.666v-2.285m-.231 7.238c.155-.076.232-.076.232-.153v-.152c-2.39-1.371-4.393-3.048-6.012-4.724v.534c1.541 1.676 3.545 3.2 5.78 4.495m13.874-10.819c.23 1.98.23 3.961 0 5.866l-.077.381c-.077.381-.154.838-.232 1.22v.533c0 .228.078.38.155.533.23-.686.385-1.524.462-2.286 1.233.077 2.312-.076 3.314-.304v-.381c-1.002.228-2.08.38-3.237.304.231-1.905.231-3.885.077-5.866z"
                />
              </g>
            </svg>
          </a>
        </p>
      </div>
      <div
        class="left-section"
      >
        <div>
          <a
            href="https://www.youtube.com/@gigaglobal"
            rel="noreferrer"
            target="_blank"
          >
            
    
            <svg
              fill="#fff"
              height="34"
              viewBox="0 0 24 24"
              width="32"
              xmlns="http://www.w3.org/2000/svg"
            >
              
        
              <path
                d="M12 2C6.475 2 2 6.475 2 12s4.475 10 10 10 10-4.475 10-10S17.525 2 12 2zm0 18c-4.418 0-8-3.582-8-8s3.582-8 8-8 8 3.582 8 8-3.582 8-8 8zM9.5 14.75v-5.5l6.25 2.75-6.25 2.75z"
              />
              
    
            </svg>
            

          </a>
        </div>
        <div>
          <a
            href="https://twitter.com/Gigaglobal"
            rel="noreferrer"
            target="_blank"
          >
            
   
            <svg
              fill="none"
              height="24"
              viewBox="0 0 1200 1227"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <g
                clip-path="url(#a)"
              >
                <path
                  d="M714.163 519.284 1160.89 0h-105.86L667.137 450.887 357.328 0H0l468.492 681.821L0 1226.37h105.866l409.625-476.152 327.181 476.152H1200L714.137 519.284zM569.165 687.828l-47.468-67.894-377.686-540.24h162.604l304.797 435.991 47.468 67.894 396.2 566.721H892.476L569.165 687.854z"
                />
              </g>
              <defs>
                <clippath
                  id="a"
                >
                  <path
                    d="M0 0h1200v1227H0z"
                  />
                </clippath>
              </defs>
            </svg>
            

          </a>
          

        </div>
        <div>
          <a
            href="https://www.instagram.com/giga_global/"
            rel="noreferrer"
            target="_blank"
          >
            <svg
              fill="none"
              height="34"
              viewBox="0 0 33 34"
              width="33"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h32.522v32.522H0z"
                fill="#fff"
                style="mix-blend-mode: multiply;"
                transform="translate(.41 .885)"
              />
              <path
                d="M23.182 12.1a1.463 1.463 0 1 0 0-2.928 1.463 1.463 0 0 0 0 2.927M16.672 10.883a6.263 6.263 0 1 0 0 12.526 6.263 6.263 0 0 0 0-12.526m0 10.328a4.066 4.066 0 1 1 0-8.132 4.066 4.066 0 0 1 0 8.132"
                fill="#fff"
              />
              <path
                d="M16.672 7.148c3.257 0 3.642.012 4.928.07a6.75 6.75 0 0 1 2.265.42 4.04 4.04 0 0 1 2.314 2.315 6.75 6.75 0 0 1 .42 2.265c.059 1.286.072 1.672.072 4.928 0 3.256-.013 3.642-.072 4.928a6.749 6.749 0 0 1-.42 2.265 4.038 4.038 0 0 1-2.314 2.314 6.75 6.75 0 0 1-2.265.42c-1.286.059-1.671.071-4.928.071-3.256 0-3.642-.012-4.928-.07a6.75 6.75 0 0 1-2.264-.42 4.04 4.04 0 0 1-2.315-2.315 6.75 6.75 0 0 1-.42-2.265c-.059-1.286-.071-1.672-.071-4.928 0-3.256.012-3.642.071-4.928a6.75 6.75 0 0 1 .42-2.265A4.04 4.04 0 0 1 9.48 7.64a6.75 6.75 0 0 1 2.264-.42c1.286-.059 1.672-.071 4.928-.071m0-2.198c-3.312 0-3.727.014-5.028.074a8.95 8.95 0 0 0-2.96.566 6.236 6.236 0 0 0-3.567 3.568 8.95 8.95 0 0 0-.567 2.96c-.06 1.3-.073 1.716-.073 5.028 0 3.312.014 3.727.073 5.028a8.951 8.951 0 0 0 .567 2.96 6.236 6.236 0 0 0 3.567 3.568 8.948 8.948 0 0 0 2.96.567c1.3.059 1.716.073 5.028.073 3.312 0 3.728-.014 5.029-.074a8.949 8.949 0 0 0 2.96-.567 6.236 6.236 0 0 0 3.567-3.567 8.95 8.95 0 0 0 .567-2.96c.059-1.3.073-1.716.073-5.028 0-3.312-.014-3.728-.073-5.028a8.95 8.95 0 0 0-.567-2.96A6.236 6.236 0 0 0 24.66 5.59a8.951 8.951 0 0 0-2.96-.567c-1.3-.06-1.716-.074-5.028-.074"
                fill="#fff"
              />
            </svg>
          </a>
        </div>
        <div>
          <a
            href="https://www.linkedin.com/showcase/gigaglobal"
            rel="noreferrer"
            target="_blank"
          >
            <svg
              fill="none"
              height="34"
              viewBox="0 0 33 34"
              width="33"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M0 0h31.565v32.522H0z"
                fill="#fff"
                style="mix-blend-mode: multiply;"
                transform="translate(.934 .885)"
              />
              <path
                d="M26.777 4.95H6.654c-.986 0-1.775.813-1.775 1.728v20.834c0 .915.789 1.728 1.775 1.728h20.123c.987 0 1.776-.813 1.776-1.728V6.678c0-.915-.79-1.728-1.776-1.728M11.882 25.683H8.43V14.097h3.452zM10.206 12.47c-1.086 0-2.072-.915-2.072-2.134 0-1.22.888-2.135 2.072-2.135 1.085 0 2.071.915 2.071 2.135 0 1.22-.986 2.134-2.071 2.134M25.1 25.58h-3.452V19.89c0-1.321 0-3.15-1.874-3.15s-2.072 1.524-2.072 2.947v5.793H14.25V14.097h3.255v1.524h.099c.493-.914 1.677-1.93 3.353-1.93 3.552 0 4.242 2.438 4.242 5.59v6.3z"
                fill="#fff"
              />
            </svg>
          </a>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CaseStudyCard renders FrequentlyAskedQuestions and take a snapshop 1`] = `
<DocumentFragment>
  .c0 {
  padding: 2rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  min-height: 100vh;
}

.c0 .faq-title {
  color: #9E9E9E;
  text-align: center;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
}

.c1 {
  margin-top: 2rem;
  max-width: 37.5rem;
  width: 100%;
}

.c1 .cds--accordion__arrow {
  fill: #fff;
}

.c1 .cds--accordion__heading:hover::before {
  background-color: transparent;
  color: #277AFF;
}

.c1 .cds--accordion__heading:focus::before {
  border: none;
}

.c1 .cds--accordion__title {
  color: #fff;
  font-family: Open Sans;
  font-size: 16px;
  font-weight: 700;
  line-height: 50px;
  letter-spacing: -1px;
  text-align: left;
  padding-left: 0;
  padding-right: 0;
  padding-top: 1rem;
  padding-bottom: 1rem;
}

.c1 .cds--accordion__content {
  font-family: Open Sans;
  font-size: 14px;
  font-weight: 400;
  line-height: 22px;
  letter-spacing: 0px;
  text-align: left;
  color: #ECECEC;
  padding-left: 0;
  padding-right: 0;
  padding-bottom: 2rem;
}

.c2 {
  display: flex;
  align-items: center;
  justify-content: flex-end;
  width: 65%;
  margin-top: 1rem;
}

.c2 .cds--btn--ghost:not([disabled]) svg {
  fill: #fff;
}

.c2 .cds--pagination-nav__page {
  color: #fff;
}

<div
    class="c0"
    id="faqs"
  >
    <p
      class="faq-title"
    >
      FAQs
    </p>
    <div
      class="c1"
    >
      <ul
        class="cds--accordion cds--accordion--end"
      >
        <li
          class="cds--accordion__item"
        >
          <button
            aria-controls="accordion-item-:r0:"
            aria-expanded="false"
            class="cds--accordion__heading"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--accordion__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
              />
            </svg>
            <div
              class="cds--accordion__title"
            >
              Title of accordion
            </div>
          </button>
          <div
            class="cds--accordion__content"
            id="accordion-item-:r0:"
          >
            <p>
              The accordion component delivers large amounts of content in a small space through progressive disclosure. The user gets key details about the underlying content and can choose to expand that content within the constraints of the accordion.
            </p>
          </div>
        </li>
        <li
          class="cds--accordion__item"
        >
          <button
            aria-controls="accordion-item-:r1:"
            aria-expanded="false"
            class="cds--accordion__heading"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--accordion__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
              />
            </svg>
            <div
              class="cds--accordion__title"
            >
              Title of accordion
            </div>
          </button>
          <div
            class="cds--accordion__content"
            id="accordion-item-:r1:"
          >
            <p />
          </div>
        </li>
        <li
          class="cds--accordion__item"
        >
          <button
            aria-controls="accordion-item-:r2:"
            aria-expanded="false"
            class="cds--accordion__heading"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--accordion__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
              />
            </svg>
            <div
              class="cds--accordion__title"
            >
              Title of accordion
            </div>
          </button>
          <div
            class="cds--accordion__content"
            id="accordion-item-:r2:"
          >
            <p>
              The accordion component delivers large amounts of content in a small space through progressive disclosure. The user gets key details about the underlying content and can choose to expand that content within the constraints of the accordion.
            </p>
          </div>
        </li>
        <li
          class="cds--accordion__item"
        >
          <button
            aria-controls="accordion-item-:r3:"
            aria-expanded="false"
            class="cds--accordion__heading"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--accordion__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
              />
            </svg>
            <div
              class="cds--accordion__title"
            >
              Title of accordion
            </div>
          </button>
          <div
            class="cds--accordion__content"
            id="accordion-item-:r3:"
          >
            <p>
              The accordion component delivers large amounts of content in a small space through progressive disclosure. The user gets key details about the underlying content and can choose to expand that content within the constraints of the accordion.
            </p>
          </div>
        </li>
        <li
          class="cds--accordion__item"
        >
          <button
            aria-controls="accordion-item-:r4:"
            aria-expanded="false"
            class="cds--accordion__heading"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="cds--accordion__arrow"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M11 8L6 13 5.3 12.3 9.6 8 5.3 3.7 6 3z"
              />
            </svg>
            <div
              class="cds--accordion__title"
            >
              Title of accordion
            </div>
          </button>
          <div
            class="cds--accordion__content"
            id="accordion-item-:r4:"
          >
            <p>
              The accordion component delivers large amounts of content in a small space through progressive disclosure. The user gets key details about the underlying content and can choose to expand that content within the constraints of the accordion.
            </p>
          </div>
        </li>
      </ul>
    </div>
    <div
      class="c2"
    >
      <nav
        aria-label="pagination"
        class="cds--pagination-nav"
      >
        <ul
          class="cds--pagination-nav__list"
        >
          <li
            class="cds--pagination-nav__list-item"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip cds--icon-tooltip cds--icon-tooltip--disabled"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-labelledby="tooltip-:r5:"
                  class="cds--btn--icon-only cds--btn cds--btn--ghost cds--btn--disabled"
                  disabled=""
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M20 24L10 16 20 8z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-:r5:"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Previous
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </li>
          <li
            class="cds--pagination-nav__list-item"
          >
            <button
              aria-current="page"
              class="cds--pagination-nav__page cds--pagination-nav__page--active"
              data-page="1"
              type="button"
            >
              <span
                class="cds--pagination-nav__accessibility-label"
              >
                Active, Page
              </span>
              1
            </button>
          </li>
          <li
            class="cds--pagination-nav__list-item"
          >
            <button
              class="cds--pagination-nav__page"
              data-page="2"
              type="button"
            >
              <span
                class="cds--pagination-nav__accessibility-label"
              >
                Page
              </span>
              2
            </button>
          </li>
          <li
            class="cds--pagination-nav__list-item"
          >
            <span
              class="cds--popover-container cds--popover--caret cds--popover--high-contrast cds--popover--bottom cds--tooltip cds--icon-tooltip"
            >
              <div
                class="cds--tooltip-trigger__wrapper"
              >
                <button
                  aria-labelledby="tooltip-:r7:"
                  class="cds--btn--icon-only cds--btn cds--btn--ghost"
                  type="button"
                >
                  <svg
                    aria-hidden="true"
                    fill="currentColor"
                    focusable="false"
                    height="16"
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M12 8L22 16 12 24z"
                    />
                  </svg>
                </button>
              </div>
              <span
                aria-hidden="true"
                class="cds--popover"
                id="tooltip-:r7:"
                role="tooltip"
              >
                <span
                  class="cds--popover-content cds--tooltip-content"
                >
                  Next
                </span>
                <span
                  class="cds--popover-caret"
                />
              </span>
            </span>
          </li>
        </ul>
        <div
          aria-atomic="true"
          aria-live="polite"
          class="cds--pagination-nav__accessibility-label"
        >
          Page 1 of 2
        </div>
      </nav>
    </div>
  </div>
</DocumentFragment>
`;

exports[`CaseStudyCard renders GetInTouch and take a snapshop 1`] = `
<DocumentFragment>
  .c0 {
  min-height: 30vh;
  padding: 3rem;
  display: flex;
  align-items: center;
  justify-content: center;
}

.c0 button {
  border-radius: 2rem;
  transform: scale(1.5);
}

<div
    class="c0"
  >
    <button
      class="cds--btn cds--btn--primary"
      type="button"
    >
      Get in touch
      <svg
        aria-hidden="true"
        class="cds--btn__icon"
        fill="currentColor"
        focusable="false"
        height="16"
        preserveAspectRatio="xMidYMid meet"
        viewBox="0 0 16 16"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M9.3 3.7L13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
        />
      </svg>
    </button>
  </div>
  .c0 >.cds--modal-container {
  background: #222222;
}

.c0 >.cds--modal-container .cds--modal-header {
  border-bottom: 1px solid #494949;
  padding: 1.5rem 0.5rem 0.5rem 1rem;
}

.c0 >.cds--modal-container h4 {
  color: #fff;
  line-height: 1.25rem;
  margin: 1rem 0;
  text-align: center;
}

.c0 >.cds--modal-container .cds--modal-content {
  padding: 1rem 10%;
}

.c0 >.cds--modal-container .cds--form-item {
  margin-top: 1rem;
}

.c0 >.cds--modal-container .cds--form-item input,
.c0 >.cds--modal-container .cds--form-item select,
.c0 >.cds--modal-container .cds--form-item textarea {
  padding: 0.5rem 1rem;
}

.c0 >.cds--modal-container .cds--modal-footer {
  block-size: 3rem;
  position: absolute;
  bottom: 0;
  width: 100%;
}

.c0 >.cds--modal-container .submit-btn {
  flex: 1;
  block-size: 3rem;
}

.c0 >.cds--modal-container .submit-btn .cds--btn__icon {
  margin-block-start: 0.455rem;
}

.c0 >.cds--modal-container .cds--modal-content {
  padding-bottom: 2rem;
}

.c0 >.cds--modal-container .cds--layer-one {
  background: none;
}

.c0 >.cds--modal-container input,
.c0 >.cds--modal-container select,
.c0 >.cds--modal-container textarea {
  background: #333333;
}

.c1 .giga-text {
  display: flex;
  font-size: 2.4rem;
  font-weight: bolder;
}

.c1 .giga-text span:first-child {
  font-weight: 100;
}

.c2 .field-wrapper span {
  font-size: 0.875rem;
  font-weight: 400;
  line-height: 1.25rem;
}

.c2 .field-wrapper input {
  border: none;
}

<form
    class="cds--form"
  >
    <div
      aria-hidden="true"
      class="cds--modal c0"
      role="presentation"
    >
      <div
        aria-modal="true"
        class="cds--modal-container"
        role="dialog"
      >
        <button
          class="cds--visually-hidden"
          type="button"
        >
          Focus sentinel
        </button>
        <div
          class="cds--modal-container-body"
        >
          <div
            class="cds--modal-header c1"
          >
            <h4>
              Get in touch
            </h4>
            <button
              aria-label="Close"
              class="cds--modal-close"
              title="Close"
              type="button"
            >
              <svg
                aria-hidden="true"
                class="cds--modal-close__icon"
                fill="currentColor"
                focusable="false"
                height="20"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
                />
              </svg>
            </button>
          </div>
          <div
            class="scrollbar-container ps"
          >
            <div
              class="cds--modal-content c2"
            >
              <div
                class="cds--g90 cds--layer-one"
              >
                <p
                  class="form-title"
                >
                  Questions or clarifications? Get in touch with us
                </p>
                <div
                  class="cds--form-item cds--text-input-wrapper"
                >
                  <div
                    class="cds--text-input__label-wrapper"
                  >
                    <label
                      class="cds--label"
                      for="name"
                    >
                      Full name
                    </label>
                  </div>
                  <div
                    class="cds--text-input__field-outer-wrapper"
                  >
                    <div
                      class="cds--text-input__field-wrapper"
                    >
                      <input
                        class="cds--text-input"
                        id="name"
                        name="full_name"
                        placeholder="John Doe"
                        title="John Doe"
                        type="text"
                        value=""
                      />
                      <span
                        class="cds--text-input__counter-alert"
                        role="alert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cds--form-item cds--text-input-wrapper"
                >
                  <div
                    class="cds--text-input__label-wrapper"
                  >
                    <label
                      class="cds--label"
                      for="email"
                    >
                      Your organisation
                    </label>
                  </div>
                  <div
                    class="cds--text-input__field-outer-wrapper"
                  >
                    <div
                      class="cds--text-input__field-wrapper"
                    >
                      <input
                        class="cds--text-input"
                        id="email"
                        name="organisation"
                        placeholder="Business name"
                        title="Business name"
                        type="text"
                        value=""
                      />
                      <span
                        class="cds--text-input__counter-alert"
                        role="alert"
                      />
                    </div>
                  </div>
                </div>
                <div
                  class="cds--form-item"
                >
                  <div
                    class="cds--select"
                  >
                    <label
                      class="cds--label"
                      for="select"
                    >
                      Purpose of inquiry
                    </label>
                    <div
                      class="cds--select-input__wrapper"
                    >
                      <select
                        class="cds--select-input"
                        id="select"
                        name="purpose"
                        placeholder="Choose an option"
                        title=""
                      >
                        <option
                          class="cds--select-option"
                          value=""
                        >
                          Choose an option
                        </option>
                        <option
                          class="cds--select-option"
                          value="I want to join"
                        >
                          I want to join
                        </option>
                        <option
                          class="cds--select-option"
                          value="I want to share data"
                        >
                          I want to share data
                        </option>
                        <option
                          class="cds--select-option"
                          value="I want to volunteer"
                        >
                          I want to volunteer
                        </option>
                        <option
                          class="cds--select-option"
                          value="I want to be a partner"
                        >
                          I want to be a partner
                        </option>
                        <option
                          class="cds--select-option"
                          value="Other"
                        >
                          Other
                        </option>
                      </select>
                      <svg
                        aria-hidden="true"
                        class="cds--select__arrow"
                        fill="currentColor"
                        focusable="false"
                        height="16"
                        preserveAspectRatio="xMidYMid meet"
                        viewBox="0 0 16 16"
                        width="16"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M8 11L3 6 3.7 5.3 8 9.6 12.3 5.3 13 6z"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
                <div
                  class="cds--form-item"
                >
                  <div
                    class="cds--text-area__label-wrapper"
                  >
                    <label
                      class="cds--label"
                      for="message"
                    >
                      Your Message
                    </label>
                  </div>
                  <div
                    class="cds--text-area__wrapper"
                  >
                    <textarea
                      aria-invalid="false"
                      class="cds--text-area"
                      id="message"
                      name="message"
                      placeholder="Type your message here..."
                      rows="5"
                      style="width: 100%;"
                    />
                    <span
                      class="cds--text-area__counter-alert"
                      role="alert"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              class="ps__rail-x"
              style="left: 0px; top: 0px;"
            >
              <div
                class="ps__thumb-x"
                style="left: 0px; width: 0px;"
                tabindex="0"
              />
            </div>
            <div
              class="ps__rail-y"
              style="top: 0px; left: 0px;"
            >
              <div
                class="ps__thumb-y"
                style="top: 0px; height: 0px;"
                tabindex="0"
              />
            </div>
          </div>
          <div
            class="cds--modal-footer cds--modal-footer cds--btn-set"
          >
            <button
              class="submit-btn cds--btn cds--btn--sm cds--layout--size-sm cds--btn--primary cds--btn--disabled"
              disabled=""
              title="Send"
              type="submit"
            >
              Send
              <svg
                aria-hidden="true"
                class="cds--btn__icon"
                fill="currentColor"
                focusable="false"
                height="16"
                preserveAspectRatio="xMidYMid meet"
                viewBox="0 0 32 32"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M16 8L14.57 9.393 20.15 15 8 15 8 17 20.15 17 14.57 22.573 16 24 24 16 16 8z"
                />
                <path
                  d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                />
              </svg>
            </button>
          </div>
        </div>
        <button
          class="cds--visually-hidden"
          type="button"
        >
          Focus sentinel
        </button>
      </div>
    </div>
  </form>
</DocumentFragment>
`;

exports[`CaseStudyCard renders LiveMap and take a snapshop 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  min-height: 100vh;
  padding-left: 1rem;
  position: relative;
}

.c1 {
  width: 40%;
  position: relative;
  z-index: 1;
  padding-left: 6rem;
}

.c1 .heading {
  color: #fff;
  font-size: 3.75rem;
  font-weight: 400;
  max-width: 32rem;
}

.c1 .marginLeft {
  margin-left: 1rem;
}

.c1 .blue {
  color: #277AFF;
}

.c1 .about-info-section-wrapper {
  display: inline-block;
}

.c1 p {
  margin-top: 1rem;
  color: #fff;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
}

.c1 button {
  margin-top: 3rem;
}

.c3 {
  width: 60%;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: flex;
  align-items: center;
}

.c3 img {
  width: 100%;
  height: 740px;
  object-fit: contain;
  object-position: right;
}

.c2 button {
  border-radius: 2rem;
}

@media (max-width:768px) {
  .c0 {
    padding: 0;
  }
}

@media (max-width:768px) {
  .c1 {
    width: 70%;
    padding: 2rem 8%;
  }

  .c1 .heading {
    font-size: 3rem;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 80%;
  }
}

<div
    class="c0"
    id="live-map"
  >
    <div
      class="c1"
    >
      <h1
        class="heading"
      >
        Global school connectivity maps
      </h1>
      <p>
        An open & live global map of schools and their connectivity
      </p>
      <a
        class="cds--link"
        href="https://#/map"
        rel="noopener"
        target="_blank"
      >
        <div
          class="c2"
        >
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Explore Gigamap
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.3 3.7L13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
              />
            </svg>
          </button>
        </div>
      </a>
    </div>
    <div
      class="c3"
    >
      <img
        height="100%"
        src="https://saunigigaweb.blob.core.windows.net/giga-maps-backend-dev/images/67a40f5f-2cbc-4bf6-b581-4f13ac97f98f.png"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`CaseStudyCard renders LiveMap and take a snapshop 2`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  align-items: center;
  justify-content: space-between;
  width: 100%;
  min-height: 100vh;
  padding-left: 1rem;
  position: relative;
}

.c1 {
  width: 40%;
  position: relative;
  z-index: 1;
  padding-left: 6rem;
}

.c1 .heading {
  color: #fff;
  font-size: 3.75rem;
  font-weight: 400;
  max-width: 32rem;
}

.c1 .marginLeft {
  margin-left: 1rem;
}

.c1 .blue {
  color: #277AFF;
}

.c1 .about-info-section-wrapper {
  display: inline-block;
}

.c1 p {
  margin-top: 1rem;
  color: #fff;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
}

.c1 button {
  margin-top: 3rem;
}

.c3 {
  width: 60%;
  position: absolute;
  right: 0;
  top: 0;
  bottom: 0;
  display: flex;
  align-items: center;
}

.c3 img {
  width: 100%;
  height: 740px;
  object-fit: contain;
  object-position: right;
}

.c2 button {
  border-radius: 2rem;
}

@media (max-width:768px) {
  .c0 {
    padding: 0;
  }
}

@media (max-width:768px) {
  .c1 {
    width: 70%;
    padding: 2rem 8%;
  }

  .c1 .heading {
    font-size: 3rem;
  }
}

@media (max-width:768px) {
  .c3 {
    width: 80%;
  }
}

<div
    class="c0"
    id="live-map"
  >
    <div
      class="c1"
    >
      <h1
        class="heading"
      />
      <p>
        An open & live global map of schools and their connectivity
      </p>
      <a
        class="cds--link"
        href="https://#/map"
        rel="noopener"
        target="_blank"
      >
        <div
          class="c2"
        >
          <button
            class="cds--btn cds--btn--primary"
            type="button"
          >
            Explore Gigamap
            <svg
              aria-hidden="true"
              class="cds--btn__icon"
              fill="currentColor"
              focusable="false"
              height="16"
              preserveAspectRatio="xMidYMid meet"
              viewBox="0 0 16 16"
              width="16"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M9.3 3.7L13.1 7.5 1 7.5 1 8.5 13.1 8.5 9.3 12.3 10 13 15 8 10 3z"
              />
            </svg>
          </button>
        </div>
      </a>
    </div>
    <div
      class="c3"
    >
      <img
        height="100%"
        src="https://saunigigaweb.blob.core.windows.net/giga-maps-backend-dev/images/67a40f5f-2cbc-4bf6-b581-4f13ac97f98f.png"
        width="100%"
      />
    </div>
  </div>
</DocumentFragment>
`;
